<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">iT100_Sample</string>
    <string name="action_settings">Settings</string>
    <string name="admin_login">Admin Login</string>
    <string name="iris_recognition">Iris Recognition</string>
    <string name="biometrics">Biometrics</string>
    <string name="system_admin">System Admin</string>
    <string name="user_management">User Management</string>
    <string name="settings">Settings</string>
    <string name="dlgtitle_notice">Notice</string>
    <string name="dlgtitle_err">Error</string>
    <string name="dlgtitle_waring">Warning</string>
    <string name="dlgtitle_guide">Guide</string>
    <string name="dlgtitle_success">Success</string>
    <string name="dlgtitle_fail">Fail</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="confirm">CONFIRM</string>
    <string name="yes_dialog">YES</string>
    <string name="no_dialog">NO</string>
    <string name="done">Done</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="id_password">ID &amp; Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="error_username_or_password">Username or Password is incorrect.</string>
    <string name="error_login_attempt">Login limit exceeded.\nPlease try again in %d minutes</string>
    <string name="search">Search</string>
    <string name="userlist_guide">&#160;&#160;&#160;Select a user to see detail, or\nclick on + to create a new user.</string>
    <string name="user_id">User ID</string>
    <string name="title">Title</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="modify_bioinfo_dialog_title">Change Biometrics</string>
    <string name="add_bioinfo_dialog_title">Add Biometrics</string>
    <string name="delete_dialog">Are you sure you want to delete the user ?</string>
    <string name="re_enroll">Are you sure you want to re-enroll the image ?</string>
    <string name="modify_bioinfo_dialog">Are you sure you want to change Biometrics?</string>
    <string name="add_bioinfo_dialog">Are you sure you want to add Biometrics?</string>
    <string name="enroll_error_already" tools:ignore="MissingTranslation">User already enrolled.</string>
    <string name="enroll_error_verified" tools:ignore="MissingTranslation"> Verified fail.</string>
    <string name="enroll_error_capture" tools:ignore="MissingTranslation"> Capture fail.</string>
    <string name="enroll_error_capture_iris" tools:ignore="MissingTranslation"> Capture iris fail.</string>
    <string name="enroll_error_capture_face" tools:ignore="MissingTranslation"> Capture face fail.</string>
    <string name="error_occluded_eyes" tools:ignore="MissingTranslation">Open your eyes wider and retry</string>
    <string name="enroll_error_empty_userid" tools:ignore="MissingTranslation">Please enter User ID </string>
    <string name="enroll_error_duplicate_userid" tools:ignore="MissingTranslation">User ID already exists </string>
    <string name="enroll_error_space_userid" tools:ignore="MissingTranslation">Spaces are not allowed</string>
    <string name="enroll_remove_glasses_guide">Please remove \nyour glasses and face mask</string>
    <string name="all">All</string>
    <string name="type" tools:ignore="MissingTranslation">Type</string>
    <string name="auth_mode">Authentication\nMode</string>
    <string name="iris_and_face" tools:ignore="MissingTranslation">IRIS + FACE</string>
    <string name="iris" tools:ignore="MissingTranslation">IRIS</string>
    <string name="face" tools:ignore="MissingTranslation">FACE</string>
    <string name="select_mode">Select Mode</string>
    <string name="select_mode_error">You need to select authentication mode</string>
    <string name="roll" tools:ignore="MissingTranslation">Account Type</string>
    <string name="user" tools:ignore="MissingTranslation">User</string>
    <string name="admin" tools:ignore="MissingTranslation">Admin</string>
    <string name="pw_change">Change Password</string>
    <string name="pw_current">Current Password</string>
    <string name="pw_new">New Password</string>
    <string name="pw_confirm">Confirm Password</string>
    <string name="err_pw_invalid">Incorrect password</string>
    <string name="err_pw_matched">New and Confirm password did not match</string>
    <string name="err_pw_4digit" tools:ignore="MissingTranslation">Password must be more than 4 characters</string>
    <string name="pw_changed">Password changed</string>
    <string name="user_basic_info">Basic Info</string>
    <string name="user_card_info">Card Info</string>
    <string name="user_details">Details</string>
    <string name="card_format">Card Format</string>
    <string name="card_id">Card ID</string>
    <string name="card_facility_code">Facility Code</string>
    <string name="card_wiegand_data">Wiegand Data</string>
    <string name="enter_card_id">Enter Card ID</string>
    <string name="enter_facility_code">Enter Facility Code</string>
    <string name="enter_card_info">Enter Card Info</string>
    <string name="tap_card">Tap the card</string>
    <string name="enroll">Enrollment</string>
    <string name="card_manual">Manual</string>
    <string name="card_number">Card Number</string>
    <string name="required">*Required</string>
    <string name="user_active">Active</string>
    <string name="user_inactive">Inactive</string>
    <string name="capture_guide">Long press and \n capture biometrics</string>
    <string name="select_type">Select Type</string>
    <string name="select_type_msg">Please select biometrics type</string>
    <string name="all_users">All users </string>
    <string name="department">Department</string>
    <string name="role">Role</string>
    <string name="privacy_agree_title">Privacy Consent</string>
    <string name="privacy_agree_content">I understand and agree that Iris ID does not receive, and has no access to, my biometric data. I further understand and agree that my employer is solely responsible for the collection, use, disclosure, and maintenance of my biometric data and for compliance with all applicable laws regarding my biometric data.</string>
    <string name="bio_content">Biometric Enrollment</string>
    <string name="privacy_agree_content_itmscloud">By selecting “I agree” below, I consent to the collection of my biometric information (face and iris) by this Iris ID Systems, Inc. (“Iris ID”) terminal. I further consent to the terminal disclosing templates of my iris and face to Iris ID, which may in turn re-disclose my biometric information to its vendors and affiliates, all for the purpose of employee time management, including my daily start and end times. I understand that this consent remains valid and continues to apply to my use of the Iris ID terminal and Iris ID’s receipt and re-disclosure of my biometric information until such time that notice of revocation of my consent is received by Iris ID. I further understand that Iris ID may store and use my biometric information for up to thirty (30) days after my employer notifies Iris ID that my employment has ended.</string>
    <string name="agree" tools:ignore="MissingTranslation">I agree</string>
    <string name="disagree" tools:ignore="MissingTranslation">I disagree</string>
    <string name="general">General</string>
    <string name="device_name">Device Name</string>
    <string name="device_type">Device Type</string>
    <string name="build_type">Build Type</string>
    <string name="tribeca">Tribeca</string>
    <string name="serial_num">Serial Number</string>
    <string name="mac_address_ethernet">Ethernet MAC Address</string>
    <string name="mac_address_wifi">Wireless MAC Address</string>
    <string name="kernel_version">Kernel Version</string>
    <string name="android_version">Android Version</string>
    <string name="hardware_version">Hardware Version</string>
    <string name="software_version">Software Version</string>
    <string name="application_version">Application Version</string>
    <string name="general_error_devicename_empty">Please enter device name </string>
    <string name="general_error_devicename_too_long">Device name is too long</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_dialog">Are you sure you want to reboot device?</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="factory_reset_dialog">This will erase all data from your device\'s internal storage.\nYou can\'t undo this action!</string>
    <string name="source">Source</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="system_updates">System updates</string>
    <string name="system_updates_dialog">Are you sure you want to update system?</string>
    <string name="system_updates_select_file">Please select *.ipk file</string>
    <string name="system_updates_copy_verify">Copying &amp; verifying system update file...</string>
    <string name="system_updates_insert_usb">Please insert a disk into USB driver</string>
    <string name="error_not_find_usb_device">USB device not recognized</string>
    <string name="import_export">Import/Export</string>
    <string name="transaction_log">Transaction Log</string>
    <string name="user_db">User DB</string>
    <string name="used">Used</string>
    <string name="db_import_from_usb">Import from USB storage</string>
    <string name="db_export_to_usb">Export to USB storage</string>
    <string name="error_not_find_db_file">Can\'t find the DB file</string>
    <string name="export_db_ing">Export DB...</string>
    <string name="import_db_ing">Import DB...</string>
    <string name="import_db_success">Import has been successfully completed.\nDevice will reboot soon</string>
    <string name="export_db_success">Export has been successfully completed.</string>
    <string name="application">Application</string>
    <string name="authentication">Authentication</string>
    <string name="authentication_type">Authentication Type</string>
    <string name="operation_mode">Operation Mode</string>
    <string name="operation_mode_interactive">Interactive</string>
    <string name="operation_mode_continuous">Continuous</string>
    <string name="app_admin_time_out">Administrator Mode Timeout</string>
    <string name="app_result_duration">Result Auto-dismiss Timer Interval</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="relay">Relay</string>
    <string name="delay_time">Timer Interval</string>
    <string name="door_status_monitoring">Door Status Monitoring</string>
    <string name="door_status_monitoring_forced_open">Forced Open</string>
    <string name="door_status_monitoring_not_open">Not Opened</string>
    <string name="door_status_monitoring_held_open">Held Open</string>
    <string name="position_guide">Position Guide</string>
    <string name="pw_current1" tools:ignore="MissingTranslation">Current Password</string>
    <string name="pw_new1" tools:ignore="MissingTranslation">New Password</string>
    <string name="pw_confirm1" tools:ignore="MissingTranslation">Confirm Password</string>
    <string name="init_password_setting">Admin Password Setting</string>
    <string name="init_password_guide">Please set a password below and click "OK". </string>
    <string name="init_password_new">Password</string>
    <string name="init_password_confirm">Confirm Password</string>
</resources>