<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="false"
    android:animateLayoutChanges="true"
    android:background="@color/settingBoxLine">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:paddingBottom="48dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/init_password_setting"
                android:textSize="45sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="480dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:gravity="fill"
                android:text="@string/init_password_guide"
                android:textColor="@color/muteText"
                android:textSize="24sp" />

            <com.irisid.user.it100_sample.Common.ui.PasswordToggleEditText
                android:id="@+id/pw_edt"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingRight="10dp"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:layout_marginTop="8dp"
                android:theme="@style/Theme.AppCompat"
                android:inputType="textNoSuggestions|textPassword"
                android:maxLength="40"
                style="@style/EditTextStyle"
                android:background="@drawable/cardinfo_box_line"
                android:textColor="@color/settingBackground"
                android:textColorHint="@color/muteText"
                android:hint="@string/init_password_new" />

            <com.irisid.user.it100_sample.Common.ui.PasswordToggleEditText
                android:id="@+id/pw_confirm_edt"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingRight="10dp"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:layout_marginTop="@dimen/setting_box_padding"
                android:theme="@style/Theme.AppCompat"
                android:inputType="textNoSuggestions|textPassword"
                android:maxLength="40"
                style="@style/EditTextStyle"
                android:background="@drawable/cardinfo_box_line"
                android:textColor="@color/settingBackground"
                android:textColorHint="@color/muteText"
                android:hint="@string/init_password_confirm" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/setting_box_padding"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/txt_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/setting_box_margin"
            android:text="@string/ok"
            android:textColor="@color/settingTextSelect"
            android:textSize="28sp"
            android:gravity="end"/>
    </LinearLayout>
</FrameLayout>