<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="500dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/setting_box_padding"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/dialog_card_line">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/setting_box_padding_narrow"
        android:paddingBottom="@dimen/setting_box_padding_narrow"
        android:text="@string/tap_card"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"/>

    <ImageView
        android:id="@+id/img_card_scan"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/setting_box_padding_narrow"
        android:layout_marginBottom="@dimen/setting_box_padding_narrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/setting_box_padding_narrow"
        android:paddingBottom="0dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/setting_box_margin"
            android:backgroundTint="@color/colorPrimary"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:visibility="visible" />


        <Button
            android:id="@+id/btn_manual"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/setting_box_margin"
            android:layout_marginEnd="@dimen/setting_box_margin"

            android:backgroundTint="@color/colorPrimary"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/card_manual"
            android:textColor="@color/white"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>