<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settingBackground">

    <LinearLayout
        android:id="@+id/linear_sub_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:padding="6dp"
            android:src="@drawable/outline_arrow_back_ios_black_18"
            android:tint="@color/settingTextSubNormal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="6dp"
            android:gravity="center_vertical"
            android:textColor="@color/settingTextSubNormal"
            android:textSize="22px"
            android:text="@string/import_export"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_tranlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/setting_box_margin"
        android:padding="@dimen/setting_box_padding"
        android:orientation="horizontal"
        android:clickable="true"
        android:background="@drawable/setting_box_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="20px"
            android:text="@string/transaction_log"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_userdb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/setting_box_margin"
        android:layout_marginRight="@dimen/setting_box_margin"
        android:layout_marginBottom="@dimen/setting_box_margin"
        android:padding="@dimen/setting_box_padding"
        android:orientation="horizontal"
        android:clickable="true"
        android:background="@drawable/setting_box_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="20px"
            android:text="@string/user_db"/>

    </LinearLayout>

</LinearLayout>