<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/SettingTextStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/pw_current1"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="end"/>

            <EditText
                android:id="@+id/pw_current_edt"
                style="@style/NetworkEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/network_edt_selector"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:theme="@style/Theme.AppCompat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/prefix_length"
                style="@style/SettingTextStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/pw_new1"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="end"/>

            <EditText
                android:id="@+id/pw_new_edt"
                style="@style/NetworkEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/network_edt_selector"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:theme="@style/Theme.AppCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/SettingTextStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/pw_confirm1"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="end"/>

            <EditText
                android:id="@+id/pw_confirm_edt"
                style="@style/NetworkEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/network_edt_selector"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:theme="@style/Theme.AppCompat" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>